samples/_failures_safe/1761218245_990114_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_06a24915.c: In function ‘main’:
./samples/SAFE/__tmp_06a24915.c:145:17: error: expected expression at end of input
  145 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_06a24915.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06a24915.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_06a24915.c:145:17: error: expected declaration or statement at end of input
